--- a/resource/translations/skosmos_ar.po
+++ b/resource/translations/skosmos_ar.po
@@ -1,4 +1,4 @@
-# 
+#
 # Translators:
 # Mahmoud Shaarawy <mahmoud.shaarawy@bibalex.org>, 2018
 msgid ""
@@ -761,3 +761,6 @@ msgstr ""
 
 msgid "concept_types"
 msgstr ""
+
+msgid "We're open to collaboration, feel free to send us your suggestions to"
+msgstr "نحن منفتحون على التعاون ، فلا تتردد في إرسال اقتراحاتك إلينا"
