--- a/resource/translations/skosmos_es.po
+++ b/resource/translations/skosmos_es.po
@@ -1,4 +1,4 @@
-# 
+#
 # Translators:
 # Karna Wegner <karna.wegner@fao.org>, 2015
 # osma <osma.suominen@helsinki.fi>, 2015,2017
@@ -763,3 +763,6 @@ msgstr ""
 
 msgid "concept_types"
 msgstr ""
+
+msgid "We're open to collaboration, feel free to send us your suggestions to"
+msgstr "Estamos abiertos a la colaboración, no dude en enviarnos sus sugerencias a"
