--- a/resource/translations/skosmos_fr.po
+++ b/resource/translations/skosmos_fr.po
@@ -1,4 +1,4 @@
-# 
+#
 # Translators:
 # Nathalie Vedovotto <nathalie.vedovotto@inist.fr>, 2017
 # osma <osma.suominen@helsinki.fi>, 2015,2017
@@ -764,3 +764,6 @@ msgstr ""
 
 msgid "concept_types"
 msgstr ""
+
+msgid "We're open to collaboration, feel free to send us your suggestions to"
+msgstr "Nous sommes ouverts à la collaboration, n'hésitez pas à nous envoyer vos suggestions à"
