--- a/resource/translations/skosmos_sv.po
+++ b/resource/translations/skosmos_sv.po
@@ -766,3 +766,6 @@ msgstr ""
 
 msgid "concept_types"
 msgstr "Typ av koncept"
+
+msgid "We're open to collaboration, feel free to send us your suggestions to"
+msgstr "Vi är öppna för samarbete, skicka oss gärna dina förslag till"
