--- a/resource/translations/skosmos_fr.po
+++ b/resource/translations/skosmos_fr.po
@@ -766,4 +766,4 @@ msgid "concept_types"
 msgstr ""
 
 msgid "We're open to collaboration, feel free to send us your suggestions to"
-msgstr "Nous sommes ouverts à la collaboration, n'hésitez pas à nous envoyer vos suggestions à"
+msgstr "Nous sommes ouverts à la collaboration, n'hésiter pas à nous envoyer vos suggestions à"
