--- a/resource/translations/skosmos_it.po
+++ b/resource/translations/skosmos_it.po
@@ -764,4 +764,4 @@ msgid "concept_types"
 msgstr ""
 
 msgid "We're open to collaboration, feel free to send us your suggestions to"
-msgstr "Siamo aperti alla collaborazione, sentiti libero di inviarci i tuoi suggerimenti a"
+msgstr "Sentitevi liberi di collaborare e di inviare i vostri suggerimenti a"
