--- a/resource/translations/skosmos_es.po
+++ b/resource/translations/skosmos_es.po
@@ -766,3 +766,9 @@ msgstr ""
 
 msgid "We're open to collaboration, feel free to send us your suggestions to"
 msgstr "Estamos abiertos a colaborar, envíenos sus sugerencias a"
+
+msgid "pav:createdOn"
+msgstr "Creado en"
+
+msgid "pav:version"
+msgstr "Versión"
