--- a/resource/translations/skosmos_it.po
+++ b/resource/translations/skosmos_it.po
@@ -765,3 +765,9 @@ msgstr ""
 
 msgid "We're open to collaboration, feel free to send us your suggestions to"
 msgstr "Sentitevi liberi di collaborare e di inviare i vostri suggerimenti a"
+
+msgid "pav:createdOn"
+msgstr "Creato"
+
+msgid "pav:version"
+msgstr "Versione"
